Canvas objects did not mark themselves for layout when they're a flex item

See comment in patch -- when we're a flex item, we (likely)
have an override size, so updateLogicalHeight has no effect,
so the check if our size has changed has no effect. Skip
that if we have an override size.

TEST=css3/flexbox/canvas-dynamic-change.html
BUG=607314,598212
R=eae@chromium.org,dgrogan@chromium.org

Review-Url: https://codereview.chromium.org/2111623002
Cr-Commit-Position: refs/heads/master@{#402973}

Former-commit-id: c43e0bb044f911727bcb340753de1fe03514a2ff